--- a/src/data/en.yml
+++ b/src/data/en.yml
@@ -367,6 +367,7 @@ examples:
   Lights: "Lights"
   Instance_Mode: "Instance Mode"
   Dom: "DOM"
+  Drawing: "Drawing"
   3D: "3D"
   Sound: "Sound"
   Mobile: "Mobile"
