--- a/package.json
+++ b/package.json
@@ -49,7 +49,10 @@
     "grunt-newer": "^1.3.0",
     "grunt-postcss": "^0.8.0",
     "grunt-uncss": "^0.6.2",
+    "js-yaml": "^3.11.0",
     "load-grunt-tasks": "^0.6.0",
+    "lodash": "^4.17.5",
+    "nodegit": "^0.21.2",
     "prettier": "^1.11.1",
     "time-grunt": "^1.4.0"
   },
