Edit templates to fit more varieties of grammars
Also provide some fexibility in punctuation choice and
some additional translations

--- a/src/data/en.yml
+++ b/src/data/en.yml
@@ -61,15 +61,16 @@ get started:
   download6: ". In this case you can change the link to:"
   download7: "A sample HTML page might look like this:"
   download8: "You can also start with this template from "
+  download9: "."
   environment-title: "Environment"
   environment1: "You can use the "
   environmentlink: "http://en.wikipedia.org/wiki/Source_code_editor"
-  environment2: "code editor"
+  environment2: " code editor "
   environment3: "of your choice. Instructions for getting set up with "
   environment4: " are included below, other good editor options include "
-  environment5: " and "
-  environment6: "."
-  environment7: "here"
+  environment5: ", "
+  environment6: " and "
+  environment7: "."
   environment8: "Open Sublime. Go to the File menu and choose Open... and choose the folder that your html and js files are located in. On the left sidebar, you should now see the folder name at the top, with a list of the files contained in the folder directly below."
   environment9: "Click on your sketch.js file and it will open on the right where you can edit it. "
   environment10: "Open the index.html file in your browser by double clicking on it in your file manager or type:"
@@ -231,8 +232,9 @@ learn:
   writing-a-tutorial-embedding-5: "this guide "
   writing-a-tutorial-embedding-6: "on how to embed p5js sketches using the widget written by "
   writing-a-tutorial-embedding-7: ". You can also see this in action on the"
-  writing-a-tutorial-embedding-8: " test tutorial page."
-  writing-a-tutorial-embedding-9: "If the example is to be animated and/or interactive but not editable. The p5.js sketch should be embedded into the page as an iframe as described below."
+  writing-a-tutorial-embedding-8: " test tutorial page"
+  writing-a-tutorial-embedding-9: "."
+  writing-a-tutorial-embedding-10: "If the example is to be animated and/or interactive but not editable. The p5.js sketch should be embedded into the page as an iframe as described below."
   writing-a-tutorial-iframe-title: "Embed a p5 sketch using an iframe"
   writing-a-tutorial-iframe-1: "An iframe is like creating a window through which you can see another page, sandboxed from the rest of your page. In this case it will be a window to the index.html containing your p5.js sketch. "
   writing-a-tutorial-iframe-2: "Put your p5 sketches in the /src/assets/learn folder of the site, in a folder labelled with the name of your sketch as shown in the screenshot. This is where all the images and p5 sketches linked by iframe should be stored."
@@ -381,10 +383,13 @@ contributors-conference:
   contributors-conference-diversity-title: "Diversity"
   contributors-conference-diversity1: "Alongside technical development, one of the main focuses of this conference was outreach, community, and diversity. The conference began with a panel"
   contributors-conference-diversity2: "Diversity: Seven Voices on Race, Gender, Ability &amp; Class for FLOSS and the Internet"
-  contributors-conference-diversity3: "Organized by"
-  contributors-conference-diversity4: "and"
-  contributors-conference-diversity5: "the panel took place Tuesday, 25 May 2015 in Kresge Auditorium at Carnegie Mellon University. Speakers included"
-  contributors-conference-diversity6: "and"
+  contributors-conference-diversity3: ". "
+  contributors-conference-diversity4: "Organized by"
+  contributors-conference-diversity5: "and"
+  contributors-conference-diversity6: ", "
+  contributors-conference-diversity7: "the panel took place Tuesday, 25 May 2015 in Kresge Auditorium at Carnegie Mellon University. Speakers included"
+  contributors-conference-diversity8: "and"
+  contributors-conference-diversity9: "."
   contributors-conference-support-title: "Support"
   contributors-conference-support1: "Our contributor conference took place at the"
   contributors-conference-support2: "at Carnegie Mellon University, an academic laboratory for atypical, anti-disciplinary, and inter-institutional research at the intersections of arts, science, technology, and culture."
