--- a/package.json
+++ b/package.json
@@ -51,10 +51,13 @@
     "grunt-postcss": "^0.8.0",
     "grunt-uncss": "^0.6.2",
     "handlebars": "^4.0.11",
+    "js-yaml": "^3.11.0",
     "load-grunt-tasks": "^0.6.0",
+    "lodash": "^4.17.10",
     "marked": "^0.3.19",
     "moment": "^2.22.1",
     "ms": "^0.7.3",
+    "nodegit": "^0.22.0",
     "prettier": "^1.12.1",
     "qs": "^1.2.2",
     "send": "^0.11.1",
