Add Motion-section to english website

--- a/src/data/en.yml
+++ b/src/data/en.yml
@@ -360,6 +360,7 @@ examples:
   Interaction: "Interaction"
   Objects: "Objects"
   Lights: "Lights"
+  Motion: "Motion"
   Instance_Mode: "Instance Mode"
   Dom: "DOM"
   Drawing: "Drawing"
