Add new folder/section name to examples yml list

--- a/src/data/en.yml
+++ b/src/data/en.yml
@@ -365,6 +365,7 @@ examples:
   Dom: "DOM"
   Drawing: "Drawing"
   Transform: "Transform"
+  Typography: "Typography"
   3D: "3D"
   Sound: "Sound"
   Mobile: "Mobile"
