add p5.accessibility library under libraries

--- a/src/data/en.yml
+++ b/src/data/en.yml
@@ -266,6 +266,7 @@ libraries:
   Libraries: "Libraries"
   p5.dom: "p5.dom lets you interact with HTML5 objects beyond the canvas, including video, audio, webcam, input, and text."
   p5.sound: "p5.sound extends p5 with Web Audio functionality including audio input, playback, analysis and synthesis."
+  p5.accessibility: "p5.accessibility makes the p5 canvas more accessible to people who are blind and visually impaired."
   Contributed: "Contributed"
   p5.serial1: "p5.serial enables serial communication between devices that support serial (RS-232) and p5 sketches running in the browser. Created by "
   p5.serial2: ", with contributions from "
