Added Input Examples from Processing

--- a/src/data/en.yml
+++ b/src/data/en.yml
@@ -383,6 +383,7 @@ examples:
   Transform: "Transform"
   Typography: "Typography"
   3D: "3D"
+  Input: "Input"
   Sound: "Sound"
   Mobile: "Mobile"
   Hello_P5: "Hello p5"
