--- a/src/data/es.yml
+++ b/src/data/es.yml
@@ -385,6 +385,7 @@ examples:
   Transform: "Transformar"
   Typography: "Tipografía"
   3D: "3D"
+  Input: "Input"
   Sound: "Sonido"
   Mobile: "Móvil"
   Hello_P5: "Hola p5"
