added English titles for new tutorials

--- a/src/data/en.yml
+++ b/src/data/en.yml
@@ -194,8 +194,14 @@ learn:
   beyond-the-canvas: "Creating and manipulating elements on the page beyond the canvas."
   3d-webgl-title: "3D/WebGL"
   3d-webgl: "Developing advanced graphics applications in p5.js using WEBGL mode."
-  color-title: Color
-  color: An introduction to digital color.
+  color-title: "Color"
+  color: "An introduction to digital color."
+  coordinate-system-and-shapes-title: "Coordinate System and Shapes"
+  coordinate-system-and-shapes: "Drawing simple shapes and using the coordinate system."
+  interactivity-title: "Interactivity"
+  interactivity: "Introduction to interactivity with the mouse and keyboard."
+  program-flow-title: "Program Flow"
+  program-flow: "Introduction to controlling program flow in p5.js."
   becoming-a-better-programmer-title: "Becoming a better programmer"
   debugging-title: "Debugging"
   debugging: "Field guide to debugging for everyone."
