Added zh-Hans yml entry and examples

--- a/src/data/zh-Hans.yml
+++ b/src/data/zh-Hans.yml
@@ -378,6 +378,7 @@ examples:
   Instance_Mode: "实例模式"
   Dom: "DOM"
   3D: "3D"
+  Input: "Input"
   Sound: "音频"
   Mobile: "移动设备"
   Hello_P5: "Hello p5"
