--- a/i18n-tracking.yml
+++ b/i18n-tracking.yml
@@ -1,4 +1,6 @@
 es:
-  src/data/en.yml: {}
+  src/data/en.yml:
+    line 42: '  sketch_info'
 zh-Hans:
-  src/data/en.yml: {}
+  src/data/en.yml:
+    line 42: '  sketch_info'
