[Porting Processing Examples] Add Load JSON File Example

--- a/src/data/en.yml
+++ b/src/data/en.yml
@@ -383,6 +383,7 @@ examples:
   Typography: "Typography"
   3D: "3D"
   Input: "Input"
+  Advanced_Data: "Advanced Data"
   Sound: "Sound"
   Mobile: "Mobile"
   Hello_P5: "Hello p5"
