--- a/src/data/es.yml
+++ b/src/data/es.yml
@@ -387,6 +387,7 @@ examples:
   3D: "3D"
   Input: "Input"
   Sound: "Sonido"
+  Advanced_Data: "Avanzado Datos"
   Mobile: "Móvil"
   Hello_P5: "Hola p5"
 
