--- a/src/data/zh-Hans.yml
+++ b/src/data/zh-Hans.yml
@@ -381,6 +381,7 @@ examples:
   3D: "3D"
   Input: "Input"
   Sound: "音频"
+  Advanced_Data: "Advanced Data"
   Mobile: "移动设备"
   Hello_P5: "Hello p5"
 
