Add ja download

--- a/src/data/ja.yml
+++ b/src/data/ja.yml
@@ -117,24 +117,24 @@ get started:
 
 download:
   Download: "ダウンロード"
-  complete-library-title: "完全なライブラリ"
-  p5.js-complete: "p5.js complete"
-  includes-1: "Includes:"
-  includes-2: "p5.js, p5.dom.js, p5.sound.js, and an example project"
-  includes-3: "Version "
+  complete-library-title: "コンプリートライブラリ"
+  p5.js-complete: "p5.js コンプリート"
+  includes-1: "含む:"
+  includes-2: "p5.js, p5.dom.js, p5.sound.js, とサンプルプロジェクト"
+  includes-3: "バージョン "
   single-files-title: "単一のファイル"
-  single-file: "Single file: "
-  p5.js-uncompressed: "Full uncompressed version"
-  compressed: "Compressed version"
-  link: "Link: "
-  statically-hosted-file: "Statically hosted file"
-  editor-title: "Editor"
-  p5.js-editor: "p5.js Web Editor"
-  editor-includes: "Start coding using the p5.js Web Editor, no setup required!"
+  single-file: "単一のファイル: "
+  p5.js-uncompressed: "非圧縮バージョン"
+  compressed: "圧縮バージョン"
+  link: "リンク: "
+  statically-hosted-file: "静的にホストされたファイル"
+  editor-title: "エディタ"
+  p5.js-editor: "p5.js ウェブエディタ"
+  editor-includes: "p5.js Web Editorを使用してコーディングを開始します。セットアップは必要ありません！"
   etc-title: "ETC"
-  older-releases: "Older releases / changelog "
-  report-bugs: "Report bugs "
-  supported-browsers: "Supported browsers "
+  older-releases: "過去のリリース / 変更履歴 "
+  report-bugs: "バグリポート "
+  supported-browsers: "サポートされているブラウザ "
   support-title: "Support p5.js!"
   support-1: "p5.js is free, open-source software. We want to make our community as open and inclusive as possible. You can support this work by "
   support-2: "becoming a member"
