--- a/src/data/ja.yml
+++ b/src/data/ja.yml
@@ -172,50 +172,50 @@ download:
 
 learn:
   learn-title: "学習"
-  learn1: "These tutorials provide more in-depth or step-by-step overviews of particular topics. Check out the "
-  learn2: "examples page"
-  learn3: "to see short demonstrations of various p5.js topics."
-  introduction-to-p5js-title: "Introduction to p5.js"
+  learn1: "これらのチュートリアルでは、特定のトピックの概要を詳細や短いステップで提供します。 様々なトピックの小さいデモを見るには、"
+  learn2: "サンプルページ"
+  learn3: "をご覧ください。"
+  introduction-to-p5js-title: "p5.js への導入"
   hello-p5js-title: "Hello p5.js"
   hello-p5js: "This short video will introduce you to the library and what you can do with it."
-  getting-started-title: "Getting Started"
-  getting-started: "Welcome to p5.js! <br> This introduction covers the basics of setting up a p5.js project."
-  p5js-overview-title: "p5.js overview"
-  p5js-overview: "An overview of the main features of p5.js."
-  p5js-processing-title: "p5.js and Processing"
-  p5js-processing: "The main differences between the two, and how to convert from one to the other."
-  p5-screen-reader-title: "p5 with a screen reader"
-  p5-screen-reader: "Setting up p5 so that it can be used easily with a screen reader."
-  using-local-server-title: "Using a local server"
-  using-local-server: "How to set up a local server on Mac OSX, Windows, or Linux."
-  connecting-p5js-title: "Connecting p5.js"
-  adding-libraries-title: "Adding libraries"
-  adding-libraries: "Finding, adding, and integrating other JS libraries."
-  nodejs-and-socketio-title: "node.js and socket.io"
-  nodejs-and-socketio: "Using a node.js server with p5.js, communcation via socket.io."
-  programming-topics-title: "Programming topics"
-  beyond-the-canvas-title: "Beyond the canvas"
-  beyond-the-canvas: "Creating and manipulating elements on the page beyond the canvas."
+  getting-started-title: "入門"
+  getting-started: "p5.js へようこそ！<br> ここでは、p5.jsプロジェクトの基礎的な設定について説明します。"
+  p5js-overview-title: "p5.js の概要"
+  p5js-overview: "p5.js の主な機能の概要です。"
+  p5js-processing-title: "p5.js と Processing"
+  p5js-processing: "2つの主な違いと、相互に変換する方法です。"
+  p5-screen-reader-title: "スクリーンリーダと p5"
+  p5-screen-reader: "スクリーンリーダで簡単に使用できるようにp5を設定する。"
+  using-local-server-title: "ローカルサーバを使う"
+  using-local-server: "Mac OSX や Windows 、 Linuxでのローカルサーバのセットアップ方法です。"
+  connecting-p5js-title: "p5.js との接続"
+  adding-libraries-title: "ライブラリの追加"
+  adding-libraries: "他のJSライブラリの検索、追加、統合する。"
+  nodejs-and-socketio-title: "node.js と socket.io"
+  nodejs-and-socketio: "p5.js と node.js サーバを使用し、 socket.io 経由で通信する。"
+  programming-topics-title: "プログラミングトピック"
+  beyond-the-canvas-title: "キャンバスを超えて"
+  beyond-the-canvas: "キャンバスを超えてページ上の要素を作成および操作する。"
   3d-webgl-title: "3D/WebGL"
-  3d-webgl: "Developing advanced graphics applications in p5.js using WEBGL mode."
-  color-title: Color
-  color: An introduction to digital color.
-  curves-title: "Curves"
-  curves: "An introduction to the three types of curves in p5.js: arcs, spline curves, and Bézier curves."
-  becoming-a-better-programmer-title: "Becoming a better programmer"
-  debugging-title: "Debugging"
-  debugging: "Field guide to debugging for everyone."
-  optimizing-title: "Optimizing p5.js code for performance"
-  optimizing: "A tutorial of tips and tricks for optimizing your code to make it run faster and smoother."
-  test-driven-development-title: "Unit testing and test driven development"
-  test-driven-development: "Save yourself from agony on install day. What is unit testing and how to use it? By Andy Timmons."
-  contributing-to-the-community-title: "Contributing to the community"
-  development-title: "Development"
-  development: "Getting started and overview for contributing to development."
-  looking-inside-title: "Looking inside p5"
-  looking-inside: "A friendly intro to the file structure and tools for p5.js development, by Luisa Pereira."
-  writing-tutorial-title: "Writing a tutorial"
-  writing-tutorial: "A guide to writing a p5.js programming tutorial."
+  3d-webgl: "WEBGLモードを使用してp5.jsで高度なグラフィックスアプリケーションを開発する。"
+  color-title: 色
+  color: "デジタルカラーの紹介です。"
+  curves-title: "曲線"
+  curves: "p5.js で扱える3種類の曲線の概要：円弧、スプライン曲線、ベジェ曲線"
+  becoming-a-better-programmer-title: "より良いプログラマになる"
+  debugging-title: "デバッギング"
+  debugging: "皆んなのためのデバッグのためのフィールドガイドです。"
+  optimizing-title: "パフォーマンス向上のための p5.js コードの最適化"
+  optimizing: "コードを最適化してより速く、よりスムーズに動かすためのヒントとチュートリアルのチュートリアルです。"
+  test-driven-development-title: "ユニットテストとテスト駆動開発"
+  test-driven-development: "インストール時に苦痛から身を守ってください。 ユニットテストとはどのようなものですか？ By Andy Timmons"
+  contributing-to-the-community-title: "コミュニティへの貢献"
+  development-title: "開発"
+  development: "開発に貢献するための概要と始め方です。"
+  looking-inside-title: "p5 の中身を覗く"
+  looking-inside: "Luisa Pereiraによる、p5.js開発のためのファイル構造とツールのフレンドリーな紹介です。"
+  writing-tutorial-title: "チュートリアルを書く"
+  writing-tutorial: "p5.js プログラミングチュートリアルの作成ガイドです。"
   writing-a-tutorial-title: "Guide to contributing p5.js tutorials"
   writing-a-tutorial-author: "This tutorial was written by Tega Brain."
   writing-a-tutorial-1: "We invite educators, contributors and general enthusiasts to contribute p5js tutorials. The p5js project makes creative coding and open source development more accessible to a diverse community and we are excited to publish tutorials on all aspects of the development process. Our learning materials so far include guides on learning p5, programming technique and how to contribute to an open source project."
