--- a/src/data/en.yml
+++ b/src/data/en.yml
@@ -192,14 +192,14 @@ learn:
   adding-libraries-title: "Adding libraries"
   adding-libraries: "Finding, adding, and integrating other JS libraries."
   nodejs-and-socketio-title: "node.js and socket.io"
-  nodejs-and-socketio: "Using a node.js server with p5.js, communcation via socket.io."
+  nodejs-and-socketio: "Using a node.js server with p5.js, communication via socket.io."
   programming-topics-title: "Programming topics"
   beyond-the-canvas-title: "Beyond the canvas"
   beyond-the-canvas: "Creating and manipulating elements on the page beyond the canvas."
   3d-webgl-title: "3D/WebGL"
   3d-webgl: "Developing advanced graphics applications in p5.js using WEBGL mode."
-  color-title: Color
-  color: An introduction to digital color.
+  color-title: "Color"
+  color: "An introduction to digital color."
   curves-title: "Curves"
   curves: "An introduction to the three types of curves in p5.js: arcs, spline curves, and Bézier curves."
   becoming-a-better-programmer-title: "Becoming a better programmer"
