--- a/src/data/ja.yml
+++ b/src/data/ja.yml
@@ -269,44 +269,44 @@ learn:
 test-tutorial:
 
 libraries:
-  Libraries: "Libraries"
-  p5.dom: "p5.dom lets you interact with HTML5 objects beyond the canvas, including video, audio, webcam, input, and text."
-  p5.sound: "p5.sound extends p5 with Web Audio functionality including audio input, playback, analysis and synthesis."
-  p5.accessibility: "p5.accessibility makes the p5 canvas more accessible to people who are blind and visually impaired."
-  Contributed: "Contributed"
-  p5.serial1: "p5.serial enables serial communication between devices that support serial (RS-232) and p5 sketches running in the browser. Created by "
+  Libraries: "ライブラリ"
+  p5.dom: "p5.dom は、ビデオ、オーディオ、Web カメラ、入力、テキストなどの HTML5 オブジェクトとキャンバスを超えてやりとりすることができます。"
+  p5.sound: "p5.sound は、 p5 の音声入力、再生、分析、合成などを含む Web オーディオ機能を拡張します。"
+  p5.accessibility: "p5.accessibility は、目の不自由な方に p5 キャンバスをより使いやすくします。"
+  Contributed: "貢献によるライブラリ"
+  p5.serial1: "p5.serial を使用すると、ブラウザで実行中の p5 スケッチとシリアル（RS-232）をサポートするデバイス間のシリアル通信が可能になります。 Created by "
   p5.serial2: ", with contributions from "
   p5.serial3: " and "
-  p5.collide2D: "p5.collide2D provides tools for calculating collision detection for 2D geometry with p5.js. Created by "
-  rita.js: "RiTa.js provides a set of natural language processing objects for generative literature. Created by "
-  p5.geolocation: "p5.geolocation provides techniques for acquiring, watching, calculating, and geofencing user locations for p5.js. Created by "
-  p5.speech: "p5.speech provides simple, clear access to the Web Speech and Speech Recognition APIs, allowing for the easy creation of sketches that can talk and listen. Created by "
-  p5.bots: "With p5.bots you can interact with your Arduino (or other microprocessor) from within the browser. Use sensor data to drive a sketch; use a sketch to drive LEDs, motors, and more! Created by "
-  grafica.js: "grafica.js lets you add simple but highly configurable 2D plots to your p5.js sketches. Created by "
-  p5.play: "p5.play provides sprites, animations, input and collision functions for games and gamelike applications. Created by "
-  p5.gui: "p5.gui generates a graphical user interface for your p5.js sketches. Created by "
-  p5.gibber: "p5.gibber provides rapid music sequencing and audio synthesis capabilities. Created by "
-  p5.particle: "The Particle and Fountain objects can be used to create data-driven effects that are defined through user structures or JSON input and user-draw functions. Created by "
-  p5.scribble: "Draw 2D primitives in a sketchy look. Created by Janneck Wullschleger, based on a port of the original Processing library "
-  p5.tiledmap1: "p5.tiledmap provides drawing and helper functions to include maps made with"
-  p5.tiledmap2: "in your sketches. Created by "
-  p5.dimensions1: "p5.dimensions extends p5.js' vector functions to work in any number of dimensions. Created by "
+  p5.collide2D: "p5.collide2D は、 p5.js を使用して2Dジオメトリの衝突検出を計算するためのツールを提供します。 Created by "
+  rita.js: "RiTa.js は、生成的な文献のための一連の自然言語処理オブジェクトを提供します。 Created by "
+  p5.geolocation: "p5.geolocation は、 p5.js のユーザーの場所を取得、監視、計算、およびジオフェンシングするためのテクニックを提供します。 Created by "
+  p5.speech: "p5.speech は、 Web Speech API と Speech Recognition API にシンプルで明確なアクセスを提供し、話したり聞いたりできるスケッチを簡単に作成できます。 Created by "
+  p5.bots: "p5.bots を使用すると、ブラウザー内から Arduino （または他のマイクロプロセッサ）と対話できます。 センサデータを使用してスケッチを駆動することができます。 スケッチを使って LED やモーターなどを駆動してください！ Created by "
+  grafica.js: "grafica.js を使用すると、シンプルなのに高度な設定が可能な2Dプロットを p5.js スケッチに追加できます。 Created by "
+  p5.play: "p5.play は、ゲームやゲームに似たアプリケーションに使われるスプライト、アニメーション、入力と衝突の機能を提供します。 Created by "
+  p5.gui: "p5.gui は、 p5.js スケッチ用のグラフィカルユーザーインターフェイスを生成します。 Created by "
+  p5.gibber: "p5.gibber は、高速な音楽シーケンシングとオーディオ合成機能を提供します。 Created by "
+  p5.particle: "Particle オブジェクトと Fountain オブジェクトを使用して、ユーザーに構造化されたデータやJSONデータとユーザーの draw 関数で定義されたデータ駆動エフェクトを作成できます。 Created by "
+  p5.scribble: "2Dプリミティブを手書き風に描くことができます。 Janneck Wullschleger によって作成された、以下のオリジナル Processing ライブラリに基づいてます。"
+  p5.tiledmap1: "p5.tiledmap は、あなたのスケッチに"
+  p5.tiledmap2: "で作成されたマップを含めるための描画関数とヘルパー関数を提供します。 Created by "
+  p5.dimensions1: "p5.dimensions は p5.js のベクトル関数を任意の次元数で拡張します。 Created by "
   p5.dimensions2: " and "
-  p5.scenemanager: "p5.SceneManager helps you create sketches with multiple states / scenes. Each scene is a like a sketch within the main sketch. Created by "
-  mappa: "Mappa provides a set of tools for working with static maps, tile maps, and geo-data. Useful when building geolocation-based visual representations. Created by "
-  p5.func: "p5.func is a p5 extension that provides new objects and utilities for function generation in the time, frequency, and spatial domains. Created by "
-  using-a-library-title: "Using a library"
-  using-a-library1: "A p5.js library can be any JavaScript code that extends or adds to the p5.js core functionality. There are two categories of libraries. Core libraries ("
-  using-a-library2: " and "
-  using-a-library3: ") are part of the p5.js distribution, while contributed libraries are developed, owned, and maintained by members of the p5.js community."
-  using-a-library4: "To include a library in your sketch, link it into your HTML file, after you have linked in p5.js. An example HTML file might look like this:"
-  create-your-own-title: "Create Your Own"
-  create-your-own1: "p5.js welcomes libraries contributed by others! Check out the"
-  create-your-own2: "libraries tutorial"
-  create-your-own3: "for more specifics about how to create one."
+  p5.scenemanager: "p5.SceneManager は、複数の状態やシーンで構成されたスケッチを作成するのに役立ちます。各シーンは、メインスケッチ内のスケッチに似ています。 Created by "
+  mappa: "Mappa には、静的マップやタイルマップ、ジオデータを扱うための一連のツールが用意されています。 地理情報のビジュアル表現を作成する場合に便利です。 Created by "
+  p5.func: "p5.func は、時間、周波数、および空間領域の関数を生成するための、新しいオブジェクトとユーティリティを提供する p5 拡張です。 Created by "
+  using-a-library-title: "ライブラリを使う"
+  using-a-library1: "p5.js ライブラリには、p5.jsコア機能を拡張または追加する任意の JavaScript コードを使用できます。 ライブラリには2つのカテゴリがあります。 コアライブラリ（"
+  using-a-library2: " と "
+  using-a-library3: "）は p5.js ディストリビューションの一部であり、貢献したライブラリは p5.js コミュニティのメンバーによって開発、所有、保守されています。"
+  using-a-library4: "ライブラリをスケッチに含めるには、 p5.js をリンクした後に HTML ファイルにリンクします。 HTML ファイルの例は次のようになります。"
+  create-your-own-title: "自身のライブラリ開発"
+  create-your-own1: "p5.js は皆さんが貢献するライブラリを歓迎します！ ライブラリの作成方法の詳細については、"
+  create-your-own2: "ライブラリチュートリアル"
+  create-your-own3: "を参照してください。"
 
 community:
-  community-title: "Community"
+  community-title: "コミュニティ"
   community-statement-title: "p5.js Community Statement"
   community-statement1: "p5.js is a community interested in exploring the creation of art and design with technology."
   community-statement2: "We are a community of, and in solidarity with, people from every gender identity and expression, sexual orientation, race, ethnicity, language, neuro-type, size, ability, class, religion, culture, subculture, political opinion, age, skill level, occupation, and background. We acknowledge that not everyone has the time, financial means, or capacity to actively participate, but we recognize and encourage involvement of all kinds. We facilitate and foster access and empowerment. We are all learners."
@@ -363,10 +363,10 @@ community:
   people1: "blah"
 
 books:
-  books-title: "Books"
+  books-title: "書籍"
 
 examples:
-  Examples: "Examples"
+  Examples: "サンプル"
   back-examples: "Back to Examples"
   Structure: "Structure"
   Form: "Form"
@@ -419,4 +419,4 @@ contributors-conference:
   contributors-conference-support7: "Thank you!"
 
 reference:
-  Reference: "Reference"
+  Reference: "リファレンス"
