--- a/src/data/ja.yml
+++ b/src/data/ja.yml
@@ -307,58 +307,57 @@ libraries:
 
 community:
   community-title: "コミュニティ"
-  community-statement-title: "p5.js Community Statement"
-  community-statement1: "p5.js is a community interested in exploring the creation of art and design with technology."
-  community-statement2: "We are a community of, and in solidarity with, people from every gender identity and expression, sexual orientation, race, ethnicity, language, neuro-type, size, ability, class, religion, culture, subculture, political opinion, age, skill level, occupation, and background. We acknowledge that not everyone has the time, financial means, or capacity to actively participate, but we recognize and encourage involvement of all kinds. We facilitate and foster access and empowerment. We are all learners."
-  community-statement3: "We like these hashtags: #noCodeSnobs (because we value community over efficiency), #newKidLove (because we all started somewhere), #unassumeCore (because we don't assume knowledge), and #BlackLivesMatter (because of course)."
-  in-practice-title: "In practice:"
-  in-practice1: " We are not code snobs. We do not assume knowledge or imply there are things that somebody should know. "
-  in-practice2: "We insist on actively engaging with requests for feedback regardless of their complexity."
-  in-practice3: "We welcome newcomers and prioritize the education of others. We strive to approach all tasks with the enthusiasm of a newcomer. Because we believe that newcomers are just as valuable in this effort as experts."
-  in-practice4: "We consistently make the effort to actively recognize and validate multiple types of contributions."
-  in-practice5: "We are always willing to offer help or guidance."
-  in-times-conflict-title: "In times of conflict:"
-  in-times-conflict1: "We listen."
-  in-times-conflict2: "We clearly communicate while acknowledging other's feelings."
-  in-times-conflict3: "We admit when we're wrong, apologize, and accept responsibility for our actions."
-  in-times-conflict4: "We are continuously seeking to improve ourselves and our community."
-  in-times-conflict5: "We keep our community respectful and open."
-  in-times-conflict6: "We make everyone feel heard."
-  in-times-conflict7: "We are mindful and kind in our interactions."
-  in-the-future-title: "In the future:"
-  in-the-future1: "The future is now."
-  contribute-title: "Contribute"
-  contribute1: "Our community is always looking for enthusiasts to help in all different ways."
-  develop-title: "Develop."
+  community-statement-title: "p5.js コミュニティ声明"
+  community-statement1: "p5.j​​sは、テクノロジーによるアートとデザインの探索に関心を持つコミュニティです。"
+  community-statement2: "私たちは、あらゆるジェンダーアイデンティティーや表現、性的指向、人種、民族性、言語、ニューロタイプ、サイズ、能力、クラス、宗教、文化、継承、政治的意見、年齢、スキル、レベル、職業、および背景の人々のコミュニティです。私たちは誰もが時間や財政的手段、能力の理由から、積極的に参加できる能力を持っているわけではないことを認識していますが、あらゆる種類の関与を認識し、奨励しています。私たちは、関与とエンパワーメントを促進し、助長します。私たちは皆、学習者です。"
+  community-statement3: "私たちは次のハッシュタグを好みます: #noCodeSnobs (私たちはコミュニティを超えた効果に価値を持つからです), #newKidLove (私たちは皆そこから始まったからです), #unassumeCore (私たちは知識を前提としていないからです), and #BlackLivesMatter (もちろん)."
+  in-practice-title: "実践:"
+  in-practice1: "私たちはコードをひけらかす見栄張りではありません。私たちは知識を前提にしておらず、誰かが知っているべきことがあることを暗示していません。"
+  in-practice2: "複雑さにかかわらず、フィードバックの要請に積極的に関与することを強く求めます。"
+  in-practice3: "私たちは新規参入者を歓迎し、その他の教育に価値があるものとしています。私たちは新規参入者の熱意を持って課題に取り組むように努めます。新規参入者は、専門家としてのこの努力においても同様に価値があると考えているからです。"
+  in-practice4: "私たちは一貫して、複数の種類の貢献を積極的に認識して検証するよう努めています。"
+  in-practice5: "私たちは常に助けや手引きを提供することをいといません。"
+  in-times-conflict-title: "食い違った際:"
+  in-times-conflict1: "私たちは耳を傾けます。"
+  in-times-conflict2: "私たちは、他者の気持ちを認めながらも、明確にコミュニケーションをとります。"
+  in-times-conflict3: "私たちが間違っていた時は間違いを認めて、私たちの行動に対する責任を受け入れます。"
+  in-times-conflict4: "私たちは常に私たち自身やコミュニティの改善点を探します。"
+  in-times-conflict5: "私たちはコミュニティへの敬意とコミュニティの解放を持続します。"
+  in-times-conflict6: "私たちは皆んなの意見に耳を傾けます。"
+  in-times-conflict7: "私たちは私たちの相互作用を心がけて思いやります。"
+  in-the-future-title: "将来には:"
+  in-the-future1: "将来は今です。"
+  contribute-title: "貢献"
+  contribute1: "私たちのコミュニティは常に愛好家をあらゆる方法で支援しています。"
+  develop-title: "開発。"
   develop1: "GitHub"
-  develop2: " is the main place where code is collected, issues are documented, and discussions about code are had. Check out the "
-  develop3: " development tutorial"
-  develop4: " to get started, or "
-  develop5: "create your own library."
-  document-title: "Document."
-  document1: " Everyone loves documentation. Help is needed "
-  document2: "porting examples"
-  document3: ", and"
-  document4: " adding documentation"
-  document5: ", and creating tutorials."
-  teach-title: "Teach."
-  teach1: " Teach a workshop, a class, a friend, a collaborator! Tag @p5xjs on Twitter and we will do our best to share what you're doing."
-  create-title: "Create."
-  create1: " p5.js is looking for designers, artists, coders, programmers to bring your creative and amazing work to show on the front page and inspire other people. Submit your work to "
+  develop2: "は、コードが保管され、問題が文書化され、コードに関する議論が行われる主要な場所です。"
+  develop4: "開発チュートリアルをチェックして始めてみるか、"
+  develop5: "独自のライブラリを作成してください。"
+  document-title: "ドキュメント。"
+  document1: "誰もがドキュメンテーションを愛しています。"
+  document2: "サンプルの移植"
+  document3: "や"
+  document4: "ドキュメンテーションの追加"
+  document5: "、チュートリアルの作成がなどの助けが必要です。"
+  teach-title: "教える。"
+  teach1: "ワークショップ、クラス、友人、協力者を教えてください！ Twitterで@ p5xjsにタグを付けて、あなたのやりたいことを分かち合いましょう。"
+  create-title: "創作。"
+  create1: "p5.jsは、デザイナー、アーティスト、コーダー、プログラマーがあなたの創造的で驚くべき作業を前面のページに表示し、他の人々に影響を与えることを求めています。 あなたの作品を"
   create2: "feature@p5js.org"
-  create3: "."
-  donate-title: "Donate."
-  donate1: " p5.js is free and open source and made by artists. Help support the development of p5.js through a donation to the "
+  create3: "に送ってください。"
+  donate-title: "寄付。"
+  donate1: "p5.jsは無料でオープンソースであり、アーティストによって制作されました。"
   donate2: "Processing Foundation"
-  donate3: "."
-  contributors-conference-title: "Contributors Conference"
-  contributors-conference1: "In 2015, p5.js held its first-ever "
-  contributors-conference2: "contributors conference"
-  contributors-conference3: ". Artists, designers, developers, educators, and more joined forces at "
-  contributors-conference4: "CMU's Studio for Creative Inquiry"
-  contributors-conference5: " to make p5.js awesome."
-  mailing-list-title: "Mailing list"
-  mailing-list-1: "Enter your email address to receive occasional updates from the Processing Foundation."
+  donate3: "への寄付によりp5.jsの開発を支援します。"
+  contributors-conference-title: "貢献者達の会議。"
+  contributors-conference1: "2015年に、p5.jsは初の"
+  contributors-conference2: "貢献者達の会議"
+  contributors-conference3: "を開催しました。アーティスト、デザイナー、デベロッパー、教育者などが"
+  contributors-conference4: "CMUのStudio for Creative Inquiry"
+  contributors-conference5: "に参加してp5.jsをとてもよくしました。"
+  mailing-list-title: "メーリングリスト"
+  mailing-list-1: "あなたの電子メールアドレスを入力することで、Processing Foundationからの最新情報を受け取ることができます。"
   people-title: "People"
   people1: "blah"
 
