Add ja examples

--- a/src/data/ja.yml
+++ b/src/data/ja.yml
@@ -350,9 +350,9 @@ community:
   donate1: "p5.jsは無料でオープンソースであり、アーティストによって制作されました。"
   donate2: "Processing Foundation"
   donate3: "への寄付によりp5.jsの開発を支援します。"
-  contributors-conference-title: "貢献者達の会議。"
+  contributors-conference-title: "貢献者会議。"
   contributors-conference1: "2015年に、p5.jsは初の"
-  contributors-conference2: "貢献者達の会議"
+  contributors-conference2: "貢献者会議"
   contributors-conference3: "を開催しました。アーティスト、デザイナー、デベロッパー、教育者などが"
   contributors-conference4: "CMUのStudio for Creative Inquiry"
   contributors-conference5: "に参加してp5.jsをとてもよくしました。"
@@ -366,30 +366,30 @@ books:
 
 examples:
   Examples: "サンプル"
-  back-examples: "Back to Examples"
-  Structure: "Structure"
-  Form: "Form"
-  Data: "Data"
-  Arrays: "Arrays"
-  Control: "Control"
-  Image: "Image"
-  Color: "Color"
-  Math: "Math"
-  Simulate: "Simulate"
-  Interaction: "Interaction"
-  Objects: "Objects"
-  Lights: "Lights"
-  Motion: "Motion"
-  Instance_Mode: "Instance Mode"
+  back-examples: "一覧にサンプルに戻る"
+  Structure: "構造"
+  Form: "形状"
+  Data: "データ"
+  Arrays: "配列"
+  Control: "制御"
+  Image: "画像"
+  Color: "色"
+  Math: "数学"
+  Simulate: "シミュレート"
+  Interaction: "インタラクション"
+  Objects: "オブジェクト"
+  Lights: "ライト"
+  Motion: "モーション"
+  Instance_Mode: "インスタンスモード"
   Dom: "DOM"
-  Drawing: "Drawing"
-  Transform: "Transform"
-  Typography: "Typography"
+  Drawing: "ドローイング"
+  Transform: "トランスフォーム"
+  Typography: "タイポグラフィ"
   3D: "3D"
-  Input: "Input"
-  Advanced_Data: "Advanced Data"
-  Sound: "Sound"
-  Mobile: "Mobile"
+  Input: "入力"
+  Advanced_Data: "アドバンスドデータ"
+  Sound: "サウンド"
+  Mobile: "モバイル"
   Hello_P5: "Hello p5"
 
 contributors-conference:
