Add ja contributors-conference

--- a/src/data/ja.yml
+++ b/src/data/ja.yml
@@ -393,28 +393,28 @@ examples:
   Hello_P5: "Hello p5"
 
 contributors-conference:
-  contributors-conference-title: "p5.js Contributors Conference"
-  contributors-conference-date: "May 25-31"
-  contributors-conference1: "A diverse group of approximately 30 participants gathered spent a week at the "
-  contributors-conference2: ", advancing the code, documentation, and community outreach tools of the p5.js programming environment. Participants came from as far away as Hong Kong, Seattle, Los Angeles,Boston and New York. Most were working professionals in the fields of creative technology, interaction design, and new-media arts, but the group also included a half-dozen undergraduate and graduate students from Carnegie Mellon’s Schools of Art and Architecture."
-  contributors-conference-participants-title: "Participants"
-  contributors-conference-diversity-title: "Diversity"
-  contributors-conference-diversity1: "Alongside technical development, one of the main focuses of this conference was outreach, community, and diversity. The conference began with a panel"
+  contributors-conference-title: "p5.js 貢献者会議"
+  contributors-conference-date: "5月25 ~ 31日"
+  contributors-conference1: "約30名の多様なグループの参加者が、"
+  contributors-conference2: "に一週間集まり、p5.jsプログラミング環境のコード、ドキュメント、コミュニティアウトリーチツールを進めました。参加者は香港やシアトル、ロサンゼルス、ボストン、ニューヨークなど遠く離れた所から来ていました。ほとんどは、創造的技術、インタラクションデザイン、ニューメディアアートの分野の専門家でしたが、カーネギーメロンの芸術・建築学校の学部生や大学院生が半数でした。"
+  contributors-conference-participants-title: "参加者"
+  contributors-conference-diversity-title: "多様性"
+  contributors-conference-diversity1: "技術開発と並んで、この会議の主な焦点はアウトリーチ、コミュニティ、多様性でした。この会議は、パネルディスカッション"
   contributors-conference-diversity2: "Diversity: Seven Voices on Race, Gender, Ability &amp; Class for FLOSS and the Internet"
-  contributors-conference-diversity3: ". "
-  contributors-conference-diversity4: "Organized by"
-  contributors-conference-diversity5: "and"
-  contributors-conference-diversity6: ", "
-  contributors-conference-diversity7: "the panel took place Tuesday, 25 May 2015 in Kresge Auditorium at Carnegie Mellon University. Speakers included"
-  contributors-conference-diversity8: "and"
-  contributors-conference-diversity9: "."
-  contributors-conference-support-title: "Support"
-  contributors-conference-support1: "Our contributor conference took place at the"
-  contributors-conference-support2: "at Carnegie Mellon University, an academic laboratory for atypical, anti-disciplinary, and inter-institutional research at the intersections of arts, science, technology, and culture."
-  contributors-conference-support3: "This event was made possible by a grant from the"
-  contributors-conference-support4: "and generous support from the"
-  contributors-conference-support5: "the"
-  contributors-conference-support6: "and"
+  contributors-conference-diversity3: "から始まりました。"
+  contributors-conference-diversity4: "主催者は"
+  contributors-conference-diversity5: "と"
+  contributors-conference-diversity6: "で、"
+  contributors-conference-diversity7: "このパネルディスカッションは2015年5月25日火曜日、カーネギーメロン大学のKresge Auditoriumで開催されました。スピーカーは"
+  contributors-conference-diversity8: "と"
+  contributors-conference-diversity9: "です。"
+  contributors-conference-support-title: "支援"
+  contributors-conference-support1: "私たちの貢献者会議は、芸術、科学、技術、文化の交差点での非定型的、懲戒的、組織間の研究のための学術研究室であるカーネギーメロン大学の"
+  contributors-conference-support2: "で行われました。"
+  contributors-conference-support3: "このイベントは"
+  contributors-conference-support4: "からの助成金と、次の組織や団体からの寛容な支援によって行われました: "
+  contributors-conference-support5: ""
+  contributors-conference-support6: "そして"
   contributors-conference-support7: "Thank you!"
 
 reference:
