--- a/src/data/ja.yml
+++ b/src/data/ja.yml
@@ -29,14 +29,14 @@ home:
   Libraries: "ライブラリ"
   Learn: "学習"
   Community: "コミュニティ"
-  p1x1: "ハロー！p5.jsは、アーティストやデザイナー、教育者、初心者のためのコーディング環境という、"
-  p1x2: "の本来の目的から始まり、今日のウェブのためにこれを再解釈するJavaScriptライブラリです。"
+  p1x1: "こんにちは！p5.js はアーティストやデザイナー、教育者、初学者のためのコーディング環境という、"
+  p1x2: "の本来の目的から始まり、今日のウェブにおけるこれらを考え直すJavaScriptライブラリです。"
   p2x1: "p5.jsにはオリジナルのProcessingスケッチのメタファを使った完全な描画機能があります。 しかし、あなたは描画キャンバスに限らず、ブラウザのページ全体をスケッチとして考えることができます！このため、p5.jsには、追加可能な"
   libraries: " ライブラリ"
   p2x2: "があり、テキスト、入力、ビデオ、Webカメラ、およびサウンドを含む他のHTML5オブジェクトと"
   interact: "簡単にやりとり"
   p2x3: "することができます。"
-  p3x1: "p5.jsはエミュレーションやポートではなく、新しい解釈であり、開発中です。"
+  p3x1: "p5.jsはエミュレーションやポートではなく、Processing の新しい実装であり、開発中です。"
   p3x2: "新しいp5.js Webエディタで今すぐ試してみてください！"
   sketch_by: "by"
   sketch_info: "CC Fest! September 8, UCLA, Los Angeles"
@@ -119,10 +119,10 @@ download:
   Download: "ダウンロード"
   complete-library-title: "コンプリートライブラリ"
   p5.js-complete: "p5.js コンプリート"
-  includes-1: "含む:"
+  includes-1: "含まれているファイル:"
   includes-2: "p5.js, p5.dom.js, p5.sound.js, とサンプルプロジェクト"
   includes-3: "バージョン "
-  single-files-title: "単一のファイル"
+  single-files-title: "p5.jsのみ"
   single-file: "単一のファイル: "
   p5.js-uncompressed: "非圧縮バージョン"
   compressed: "圧縮バージョン"
@@ -189,6 +189,8 @@ learn:
   using-local-server-title: "ローカルサーバを使う"
   using-local-server: "Mac OSX や Windows 、 Linuxでのローカルサーバのセットアップ方法です。"
   connecting-p5js-title: "p5.js との接続"
+  creating-libraries-title: "ライブラリの作成"
+  creating-libraries: "p5.js アドオンライブラリの作成"
   adding-libraries-title: "ライブラリの追加"
   adding-libraries: "他のJSライブラリの検索、追加、統合する。"
   nodejs-and-socketio-title: "node.js と socket.io"
@@ -200,6 +202,12 @@ learn:
   3d-webgl: "WEBGLモードを使用してp5.jsで高度なグラフィックスアプリケーションを開発する。"
   color-title: 色
   color: "デジタルカラーの紹介です。"
+  coordinate-system-and-shapes-title: "座標系と図形"
+  coordinate-system-and-shapes: "シンプルな図形を描き、座標系を使う。"
+  interactivity-title: "インタラクティビティ"
+  interactivity: "マウスとキーボードを使ったインタラクションの紹介。"
+  program-flow-title: "プログラムフロー"
+  program-flow: "p5.js のプログラムフローの制御の概要。"
   curves-title: "曲線"
   curves: "p5.js で扱える3種類の曲線の概要：円弧、スプライン曲線、ベジェ曲線"
   becoming-a-better-programmer-title: "より良いプログラマになる"
@@ -308,25 +316,25 @@ libraries:
 community:
   community-title: "コミュニティ"
   community-statement-title: "p5.js コミュニティ声明"
-  community-statement1: "p5.j​​sは、テクノロジーによるアートとデザインの探索に関心を持つコミュニティです。"
-  community-statement2: "私たちは、あらゆるジェンダーアイデンティティーや表現、性的指向、人種、民族性、言語、ニューロタイプ、サイズ、能力、クラス、宗教、文化、継承、政治的意見、年齢、スキル、レベル、職業、および背景の人々のコミュニティです。私たちは誰もが時間や財政的手段、能力の理由から、積極的に参加できる能力を持っているわけではないことを認識していますが、あらゆる種類の関与を認識し、奨励しています。私たちは、関与とエンパワーメントを促進し、助長します。私たちは皆、学習者です。"
-  community-statement3: "私たちは次のハッシュタグを好みます: #noCodeSnobs (私たちはコミュニティを超えた効果に価値を持つからです), #newKidLove (私たちは皆そこから始まったからです), #unassumeCore (私たちは知識を前提としていないからです), and #BlackLivesMatter (もちろん)."
+  community-statement1: "p5.j​​s は、テクノロジーによるアートとデザインの探索に関心を持つコミュニティです。"
+  community-statement2: "私たちは、あらゆるジェンダーアイデンティティーや表現、性的指向、人種、民族性、言語、ニューロタイプ、サイズ、能力、クラス、宗教、文化、継承、政治的意見、年齢、スキル、レベル、職業などの多様な背景の人々のコミュニティです。私たちは、誰もが時間や財政的手段、能力の理由から、積極的に参加できる能力を持っているわけではないことを認識していますが、あらゆる種類の関与を認識し、奨励しています。私たちは、関与とエンパワーメントを促進し、助長します。私たちは皆、学習者です。"
+  community-statement3: "私たちは、次のハッシュタグを好みます: #noCodeSnobs (私たちは、コミュニティを超えた効果に価値を持つからです), #newKidLove (私たちは、皆そこから始まったからです), #unassumeCore (私たちは、知識を前提としていないからです), and #BlackLivesMatter (もちろん)."
   in-practice-title: "実践:"
-  in-practice1: "私たちはコードをひけらかす見栄張りではありません。私たちは知識を前提にしておらず、誰かが知っているべきことがあることを暗示していません。"
+  in-practice1: "私たちは、コードをひけらかす見栄張りではありません。私たちは知識を前提にしておらず、誰かが知っているべきことがあることを暗示していません。"
   in-practice2: "複雑さにかかわらず、フィードバックの要請に積極的に関与することを強く求めます。"
-  in-practice3: "私たちは新規参入者を歓迎し、その他の教育に価値があるものとしています。私たちは新規参入者の熱意を持って課題に取り組むように努めます。新規参入者は、専門家としてのこの努力においても同様に価値があると考えているからです。"
-  in-practice4: "私たちは一貫して、複数の種類の貢献を積極的に認識して検証するよう努めています。"
-  in-practice5: "私たちは常に助けや手引きを提供することをいといません。"
+  in-practice3: "私たちは、新規参入者を歓迎し、その他の教育に価値があるものとしています。私たちは、新規参入者の熱意を持って課題に取り組むように努めます。新規参入者は、専門家としてのこの努力においても同様に価値があると考えているからです。"
+  in-practice4: "私たちは、一貫して、複数の種類の貢献を積極的に認識して検証するよう努めています。"
+  in-practice5: "私たちは、常に助けや手引きを提供することをいといません。"
   in-times-conflict-title: "食い違った際:"
-  in-times-conflict1: "私たちは耳を傾けます。"
+  in-times-conflict1: "私たちは、耳を傾けます。"
   in-times-conflict2: "私たちは、他者の気持ちを認めながらも、明確にコミュニケーションをとります。"
-  in-times-conflict3: "私たちが間違っていた時は間違いを認めて、私たちの行動に対する責任を受け入れます。"
-  in-times-conflict4: "私たちは常に私たち自身やコミュニティの改善点を探します。"
-  in-times-conflict5: "私たちはコミュニティへの敬意とコミュニティの解放を持続します。"
-  in-times-conflict6: "私たちは皆んなの意見に耳を傾けます。"
-  in-times-conflict7: "私たちは私たちの相互作用を心がけて思いやります。"
-  in-the-future-title: "将来には:"
-  in-the-future1: "将来は今です。"
+  in-times-conflict3: "私たちが、間違っていた時は間違いを認めて、私たちの行動に対する責任を受け入れます。"
+  in-times-conflict4: "私たちは、常に私たち自身やコミュニティの改善点を探します。"
+  in-times-conflict5: "私たちは、コミュニティへの敬意とコミュニティの解放を持続します。"
+  in-times-conflict6: "私たちは、皆んなの意見に耳を傾けます。"
+  in-times-conflict7: "私たちは、私たちの相互作用を心がけて思いやります。"
+  in-the-future-title: "将来的には:"
+  in-the-future1: "将来のことを考えられるのは今です。"
   contribute-title: "貢献"
   contribute1: "私たちのコミュニティは常に愛好家をあらゆる方法で支援しています。"
   develop-title: "開発。"
@@ -350,7 +358,7 @@ community:
   donate1: "p5.jsは無料でオープンソースであり、アーティストによって制作されました。"
   donate2: "Processing Foundation"
   donate3: "への寄付によりp5.jsの開発を支援します。"
-  contributors-conference-title: "貢献者会議。"
+  contributors-conference-title: "貢献者会議"
   contributors-conference1: "2015年に、p5.jsは初の"
   contributors-conference2: "貢献者会議"
   contributors-conference3: "を開催しました。アーティスト、デザイナー、デベロッパー、教育者などが"
