--- a/src/data/ja.yml
+++ b/src/data/ja.yml
@@ -212,9 +212,9 @@ learn:
   curves: "p5.js で扱える3種類の曲線の概要：円弧、スプライン曲線、ベジェ曲線"
   becoming-a-better-programmer-title: "より良いプログラマになる"
   debugging-title: "デバッギング"
-  debugging: "皆んなのためのデバッグのためのフィールドガイドです。"
+  debugging: "皆のためのデバッグのためのフィールドガイドです。"
   optimizing-title: "パフォーマンス向上のための p5.js コードの最適化"
-  optimizing: "コードを最適化してより速く、よりスムーズに動かすためのヒントとチュートリアルのチュートリアルです。"
+  optimizing: "コードを最適化してより速く、よりスムーズに動かすためのヒントとチュートリアルです。"
   test-driven-development-title: "ユニットテストとテスト駆動開発"
   test-driven-development: "インストール時に苦痛から身を守ってください。 ユニットテストとはどのようなものですか？ By Andy Timmons"
   contributing-to-the-community-title: "コミュニティへの貢献"
@@ -298,9 +298,9 @@ libraries:
   p5.scribble: "2Dプリミティブを手書き風に描くことができます。 Janneck Wullschleger によって作成された、以下のオリジナル Processing ライブラリに基づいてます。"
   p5.tiledmap1: "p5.tiledmap は、あなたのスケッチに"
   p5.tiledmap2: "で作成されたマップを含めるための描画関数とヘルパー関数を提供します。 Created by "
-  p5.dimensions1: "p5.dimensions は p5.js のベクトル関数を任意の次元数で拡張します。 Created by "
+  p5.dimensions1: "p5.dimensions は p5.js のベクトル機能を任意の次元数に拡張します。 Created by "
   p5.dimensions2: " and "
-  p5.scenemanager: "p5.SceneManager は、複数の状態やシーンで構成されたスケッチを作成するのに役立ちます。各シーンは、メインスケッチ内のスケッチに似ています。 Created by "
+  p5.scenemanager: "p5.SceneManager は、複数の状態やシーンで構成されたスケッチを作成するのに役立ちます。各シーンは、メインプログラム内のスケッチに似ています。 Created by "
   mappa: "Mappa には、静的マップやタイルマップ、ジオデータを扱うための一連のツールが用意されています。 地理情報のビジュアル表現を作成する場合に便利です。 Created by "
   p5.func: "p5.func は、時間、周波数、および空間領域の関数を生成するための、新しいオブジェクトとユーティリティを提供する p5 拡張です。 Created by "
   using-a-library-title: "ライブラリを使う"
@@ -317,12 +317,12 @@ community:
   community-title: "コミュニティ"
   community-statement-title: "p5.js コミュニティ声明"
   community-statement1: "p5.j​​s は、テクノロジーによるアートとデザインの探索に関心を持つコミュニティです。"
-  community-statement2: "私たちは、あらゆるジェンダーアイデンティティーや表現、性的指向、人種、民族性、言語、ニューロタイプ、サイズ、能力、クラス、宗教、文化、継承、政治的意見、年齢、スキル、レベル、職業などの多様な背景の人々のコミュニティです。私たちは、誰もが時間や財政的手段、能力の理由から、積極的に参加できる能力を持っているわけではないことを認識していますが、あらゆる種類の関与を認識し、奨励しています。私たちは、関与とエンパワーメントを促進し、助長します。私たちは皆、学習者です。"
+  community-statement2: "私たちは、あらゆるジェンダーアイデンティティーや表現、性的指向、人種、民族性、言語、ニューロタイプ、サイズ、能力、クラス、宗教、文化、サブカルチャー、政治的意見、年齢、スキル、レベル、職業、背景など多様な人々のコミュニティです。私たちは、誰もが時間や財政的手段、能力の理由から、積極的に参加できる能力を持っているわけではないことを認識していますが、あらゆる種類の関与を認識し、奨励しています。私たちは、関与とエンパワーメントを促進し、助長します。私たちは皆、学習者です。"
   community-statement3: "私たちは、次のハッシュタグを好みます: #noCodeSnobs (私たちは、コミュニティを超えた効果に価値を持つからです), #newKidLove (私たちは、皆そこから始まったからです), #unassumeCore (私たちは、知識を前提としていないからです), and #BlackLivesMatter (もちろん)."
   in-practice-title: "実践:"
-  in-practice1: "私たちは、コードをひけらかす見栄張りではありません。私たちは知識を前提にしておらず、誰かが知っているべきことがあることを暗示していません。"
+  in-practice1: "私たちは、コードをひけらかす見栄張りではありません。私たちは知識を前提としておらず、誰かが知っているべきことがあることを暗示していません。"
   in-practice2: "複雑さにかかわらず、フィードバックの要請に積極的に関与することを強く求めます。"
-  in-practice3: "私たちは、新規参入者を歓迎し、その他の教育に価値があるものとしています。私たちは、新規参入者の熱意を持って課題に取り組むように努めます。新規参入者は、専門家としてのこの努力においても同様に価値があると考えているからです。"
+  in-practice3: "私たちは、新規参入者を歓迎し、その他の教育に価値があるものとしています。私たちは、新規参入者の熱意を持って課題に取り組むように努めます。新規参入者は、専門家と同様に、この努力において価値があると信じているからです。"
   in-practice4: "私たちは、一貫して、複数の種類の貢献を積極的に認識して検証するよう努めています。"
   in-practice5: "私たちは、常に助けや手引きを提供することをいといません。"
   in-times-conflict-title: "食い違った際:"
@@ -331,7 +331,7 @@ community:
   in-times-conflict3: "私たちが、間違っていた時は間違いを認めて、私たちの行動に対する責任を受け入れます。"
   in-times-conflict4: "私たちは、常に私たち自身やコミュニティの改善点を探します。"
   in-times-conflict5: "私たちは、コミュニティへの敬意とコミュニティの解放を持続します。"
-  in-times-conflict6: "私たちは、皆んなの意見に耳を傾けます。"
+  in-times-conflict6: "私たちは、皆の意見に耳を傾けます。"
   in-times-conflict7: "私たちは、私たちの相互作用を心がけて思いやります。"
   in-the-future-title: "将来的には:"
   in-the-future1: "将来のことを考えられるのは今です。"
