--- a/src/data/ja.yml
+++ b/src/data/ja.yml
@@ -112,7 +112,7 @@ get started:
   learn5: "ページを参照してください。"
   learn6: "If you wish to use p5 with a screenreader, check out the "
   learn7: "p5 with a screenreader tutorial"
-  book1: "Parts of this tutorial were adapted from the book, Getting Started with p5.js, by Lauren McCarthy, Casey Reas, and Ben Fry, O'Reilly / Make 2015. Copyright "
+  book1: "このチュートリアルの一部は、Lauren McCarthy、Casey Reas、Ben Fry、O'Reilly / Make 2015によるp5.jsの入門から修正されました。Copyright "
   book2: 2015 Lauren McCarthy, Casey Reas, and Ben Fry. All rights reserved.
 
 download:
@@ -224,20 +224,20 @@ learn:
   looking-inside: "Luisa Pereiraによる、p5.js開発のためのファイル構造とツールのフレンドリーな紹介です。"
   writing-tutorial-title: "チュートリアルを書く"
   writing-tutorial: "p5.js プログラミングチュートリアルの作成ガイドです。"
-  writing-a-tutorial-title: "Guide to contributing p5.js tutorials"
-  writing-a-tutorial-author: "This tutorial was written by Tega Brain."
-  writing-a-tutorial-1: "We invite educators, contributors and general enthusiasts to contribute p5js tutorials. The p5js project makes creative coding and open source development more accessible to a diverse community and we are excited to publish tutorials on all aspects of the development process. Our learning materials so far include guides on learning p5, programming technique and how to contribute to an open source project."
-  writing-a-tutorial-2: "We welcome new written tutorial contributions and this guide outlines the steps of how to propose, prepare and contribute."
-  writing-a-tutorial-how-start-title: "How to get started:"
-  writing-a-tutorial-how-start-1: "Check that your proposed topic has not already been covered. There is "
-  writing-a-tutorial-how-start-2: "a working spreadsheet here"
-  writing-a-tutorial-how-start-3: "that outlines in progress tutorials. If your topic is listed as in progress, perhaps you can add to work being done and contribute to preparing existing work for publication so please reach out to us."
-  writing-a-tutorial-how-start-4: "If your topic is not already covered and is not listed as in progress, please write a few sentences on what you propose to cover and email us this description at education@p5js.org."
-  writing-a-tutorial-how-prepare-title: "How to prepare a p5js tutorial for publication online:"
-  writing-a-tutorial-how-prepare-1: "When your tutorial is ready for publication, please follow these steps to prepare your content for the p5js website."
-  writing-a-tutorial-how-prepare-2: "Prepare the content of your tutorial as a tutorial-name.hbs file with "
-  writing-a-tutorial-how-prepare-3: "this basic structure"
-  writing-a-tutorial-how-prepare-4: ". As is shown in this file, it must contain a header as shown below:"
+  writing-a-tutorial-title: "p5.jsチュートリアル貢献ガイド"
+  writing-a-tutorial-author: "このチュートリアルはTega Brainによって書かれました。"
+  writing-a-tutorial-1: "私たちは、教育者、貢献者、そして一般の愛好家にp5jsチュートリアルを寄稿することを勧めます。p5jsプロジェクトは、クリエィティブコーディングとオープンソース開発を多様なコミュニティにもっとアクセスしやすくしており、開発プロセスのすべての面でチュートリアルを公開することに張り切っています。これまでの学習教材には、p5の学習ガイド、プログラミング手法、オープンソースプロジェクトに貢献する方法などが含まれています。"
+  writing-a-tutorial-2: "私たちは新しいチュートリアルの寄稿を歓迎します。このガイドはどのように新しいチュートリアルを提案し、準備し、貢献するかを概説しています。"
+  writing-a-tutorial-how-start-title: "始め方:"
+  writing-a-tutorial-how-start-1: "提案するチュートリアルが既存のチュートリアルと重複していないことを確認してください。進行中のチュートリアルの概要を説明したスプレッドシートが"
+  writing-a-tutorial-how-start-2: "ここ"
+  writing-a-tutorial-how-start-3: "にあります。もし、あなたの提案するチュートリアルが進行中でしたら、あなたは仕事に参加して進行中のチュートリアルに貢献できる場合があるので、私たちに連絡してください。"
+  writing-a-tutorial-how-start-4: "あなたのトピックがまだカバーされておらず、進行中のものとしてリストアップされていない場合は、あなたが提案するチュートリアルについての説明をeducation@p5js.orgまでメールを送ってください。"
+  writing-a-tutorial-how-prepare-title: "p5jsチュートリアルをオンラインで公開する方法:"
+  writing-a-tutorial-how-prepare-1: "チュートリアルの公開準備ができたら、次の手順に従ってp5jsのWebサイトのコンテンツを準備してください。"
+  writing-a-tutorial-how-prepare-2: "チュートリアルの内容を"
+  writing-a-tutorial-how-prepare-3: "このベーシックな構造"
+  writing-a-tutorial-how-prepare-4: "のtutorial-name.hbsファイルとして準備します。このファイルに示されているように、ヘッダーは以下のように含まれている必要があります:"
   writing-a-tutorial-how-prepare-5: "The folder containing your tutorial will be placed in the 'tutorials' folder of the p5js site. The file called index.hbs is the "
   writing-a-tutorial-how-prepare-6: "p5.js tutorials landing page,"
   writing-a-tutorial-how-prepare-7: " and the test-tutorial.hbs file is the test tutorial."
